@@ -1,0 +1,6 @@
+#!/bin/sh
+
+# Legacy action script for "service postgresql --@__FILE__@"
+cmd="@bindir@/postgresql-setup --@__FILE__@ postgresql@DISTSUFF@"
+echo "Hint: the preferred way to do this is now \"$cmd\"" >&2
+$cmd
